# lambda

./: Makefile  README  README.md  REPL.ml  dune  dune-project  lambda.opam
.github/workflows/: act.yml
lib/: ast.ml  dune  interpreter.ml  parser.ml  pprinter.ml  utils.ml
